dnl Process this file with autoconf to produce a configure script.
dnl $Id: configure.in,v 0.10 1999/06/08 09:33:17 luis Exp $
dnl Author: Luis.Colorado@SLUG.HispaLinux.ES
dnl Copyright: GPL (C) 1999 Luis.Colorado@SLUG.HispaLinux.ES
dnl 

AC_INIT(c2html.c)

dnl Checks for programs.

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h malloc.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_CHECK_FUNCS(strdup)

AC_OUTPUT(Makefile)

dnl $Id: configure.in,v 0.10 1999/06/08 09:33:17 luis Exp $
